--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.0
   cached_network_image: ^3.3.1
+  fluttertoast: ^8.2.4
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
@@ -30,3 +32,4 @@ flutter:
 
   assets:
     - assets/splash_animation.json
+    - assets/search.svg
